# InnoLiber

./: .env.example  .env.template  .gitignore  CLAUDE.md  QUICK_START.md  README.md  docker-compose.local-dev.yml  docker-compose.prod.yml  docker-compose.yml  environment.yml  requirements.txt  start-dev.bat
backend/: .dockerignore  DOCKERFILE_COMPARISON.md  Dockerfile  Dockerfile.conda  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7b6d4d67e324_add_structured_content_fields_to_.py  9a6e37957675_initial_database_schema_with_user_and_.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: auth.py  proposals.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/crud/: proposal.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  base.py  proposal.py  user.py
backend/app/schemas/: auth.py  proposal.py
docs/PRD/: InnoLiver_PRD-v0.0.1.md
docs/design/: component_development_standards.md  frontend_pages_complete.md  icon_requirements.md  responsive_design_guide.md
docs/design/archive/: frontend_prototypes.md
docs/development/: coding_standards.md  conda_setup.md
docs/technical/: 00_development_plan.md  01_tech_stack.md  02_database_design.md  03_api_specification.md  04_dockerfile_implementation_plan.md  05_docker_deployment_guide.md  PHASE_2_1_COMPLETION.md  PHASE_2_2_PLAN.md
draft/: possible_structure.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  main.tsx
tools/scripts/: init_db.sql
(+31 files in other folders)
